hal/include/HAL/Digital.h

  void pulse(void* digital_port_pointer, double pulseLength, int32_t *status);
  typedef enum {kTwoPulse=0, kSemiperiod=1, kPulseLength=2, kExternalDirection=3} Mode;
  enum tSPIConstants {kReceiveFIFODepth=512, kTransmitFIFODepth=512};
  enum tFrameMode {kChipSelect, kPreLatchPulse, kPostLatchPulse, kPreAndPostLatchPulse};