hal/include/HAL/Analog.hpp

enum AnalogTriggerType
{
	kInWindow = 0,
	kState = 1,
	kRisingPulse = 2,
	kFallingPulse = 3
};
	void* initializeAnalogPort(void* port_pointer, int32_t *status);
	bool checkAnalogModule(uint8_t module);
	bool checkAnalogChannel(uint32_t pin);
	void setAnalogSampleRate(double samplesPerSecond, int32_t *status);
	float getAnalogSampleRate(int32_t *status);
	void setAnalogSampleRateWithModule(uint8_t module, double samplesPerSecond, int32_t *status);
	float getAnalogSampleRateWithModule(uint8_t module, int32_t *status);