hal/include/HAL/Task.hpp

typedef int (*FUNCPTR)(...);
typedef int (*FUNCPTR) (); /* ptr to function returning int */