wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

package edu.wpi.first.wpilibj.hal;
import com.ochafik.lang.jnaerator.runtime.LibraryExtractor;
import com.ochafik.lang.jnaerator.runtime.MangledFunctionMapper;
import com.ochafik.lang.jnaerator.runtime.globals.GlobalDouble;
import com.ochafik.lang.jnaerator.runtime.globals.GlobalInt;
import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.LongByReference;
import com.sun.jna.ptr.NativeLongByReference;
import java.nio.ByteBuffer;
import java.nio.IntBuffer;
import java.nio.LongBuffer;
/**
 * JNA Wrapper for library <b>HAL</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public class HALLibrary implements Library {
	public static final String JNA_LIBRARY_NAME = LibraryExtractor.getLibraryPath("HALAthenaJava", true, HALLibrary.class);
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(HALLibrary.JNA_LIBRARY_NAME, MangledFunctionMapper.DEFAULT_OPTIONS);
	static {
		Native.register(HALLibrary.JNA_LIBRARY_NAME);
	}
	/**
	 * <i>native declaration : target/native/include/HAL/Analog.h</i><br>
	 * enum values
	 */
	public static interface AnalogTriggerType {
		/** <i>native declaration : target/native/include/HAL/Analog.h:36</i> */
		public static final int kInWindow = 0;
		/** <i>native declaration : target/native/include/HAL/Analog.h:36</i> */
		public static final int kState = 1;
		/** <i>native declaration : target/native/include/HAL/Analog.h:36</i> */
		public static final int kRisingPulse = 2;
		/** <i>native declaration : target/native/include/HAL/Analog.h:36</i> */
		public static final int kFallingPulse = 3;
	};
	/**
	 * <i>native declaration : target/native/include/HAL/Digital.h</i><br>
	 * enum values
	 */
	public static interface Mode {
		/** <i>native declaration : target/native/include/HAL/Digital.h:42</i> */
		public static final int kTwoPulse = 0;
		/** <i>native declaration : target/native/include/HAL/Digital.h:42</i> */
		public static final int kSemiperiod = 1;
		/** <i>native declaration : target/native/include/HAL/Digital.h:42</i> */
		public static final int kPulseLength = 2;
		/** <i>native declaration : target/native/include/HAL/Digital.h:42</i> */
		public static final int kExternalDirection = 3;
	};
	/**
	 * <i>native declaration : target/native/include/HAL/Digital.h:91</i><br>
	 * enum values
	 */
	public static interface tSPIConstants {
		/** <i>native declaration : target/native/include/HAL/Digital.h:91</i> */
		public static final int kReceiveFIFODepth = 512;
		/** <i>native declaration : target/native/include/HAL/Digital.h:91</i> */
		public static final int kTransmitFIFODepth = 512;
	};
	/**
	 * <i>native declaration : target/native/include/HAL/Digital.h:92</i><br>
	 * enum values
	 */
	public static interface tFrameMode {
		/** <i>native declaration : target/native/include/HAL/Digital.h:92</i> */
		public static final int kChipSelect = 0;
		/** <i>native declaration : target/native/include/HAL/Digital.h:92</i> */
		public static final int kPreLatchPulse = 1;
		/** <i>native declaration : target/native/include/HAL/Digital.h:92</i> */
		public static final int kPostLatchPulse = 2;
		/** <i>native declaration : target/native/include/HAL/Digital.h:92</i> */
		public static final int kPreAndPostLatchPulse = 3;
	};
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String NO_AVAILABLE_RESOURCES_MESSAGE = "No available resources to allocate";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String INCOMPATIBLE_STATE_MESSAGE = "Incompatible State: The operation cannot be completed";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int SPI_WRITE_NO_MOSI = 12;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int PARAMETER_OUT_OF_RANGE = -28;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String NULL_PARAMETER_MESSAGE = "A pointer parameter to a method is NULL";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int ANALOG_TRIGGER_LIMIT_ORDER_ERROR = -10;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int INCOMPATIBLE_STATE = 15;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String VOLTAGE_OUT_OF_RANGE_MESSAGE = "Voltage to convert to raw value is out of range [-10; 10]";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int SAMPLE_RATE_TOO_HIGH = 1;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int NULL_PARAMETER = -5;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String PARAMETER_OUT_OF_RANGE_MESSAGE = "A parameter is out of range.";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String SAMPLE_RATE_TOO_HIGH_MESSAGE = "Analog module sample rate is too high";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String SPI_WRITE_NO_MOSI_MESSAGE = "Cannot write to SPI port with no MOSI output";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String LOOP_TIMING_ERROR_MESSAGE = "Digital module loop timing is not the expected value";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String ANALOG_TRIGGER_PULSE_OUTPUT_ERROR_MESSAGE = "Attempted to read AnalogTrigger pulse output.";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int ANALOG_TRIGGER_PULSE_OUTPUT_ERROR = -11;
	/** <i>native declaration : target/native/include/HAL/Task.h</i> */
	public static final int OK = 0;
	/** <i>native declaration : target/native/include/HAL/Task.h</i> */
	public static final int ERROR = (-1);
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int SPI_READ_NO_MISO = 13;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String SPI_READ_NO_MISO_MESSAGE = "Cannot read from SPI port with no MISO input";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int SPI_READ_NO_DATA = 14;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int NO_AVAILABLE_RESOURCES = -4;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String ANALOG_TRIGGER_LIMIT_ORDER_ERROR_MESSAGE = "AnalogTrigger limits error.  Lower limit > Upper Limit";
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int VOLTAGE_OUT_OF_RANGE = 2;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final int LOOP_TIMING_ERROR = 4;
	/** <i>native declaration : target/native/include/HAL/Errors.h</i> */
	public static final String SPI_READ_NO_DATA_MESSAGE = "No data available to read from SPI";
	/** <i>native declaration : target/native/include/HAL/Notifier.h:7</i> */
	public interface initializeNotifier_ProcessQueue_callback extends Callback {
		void apply(int uint32_t1, Pointer voidPtr1);
	};
	/** <i>native declaration : target/native/include/HAL/Interrupts.h</i> */
	public interface InterruptHandlerFunction extends Callback {
		void apply(int interruptAssertedMask, Pointer param);
	};
	/** <i>native declaration : target/native/include/HAL/Task.h</i> */
	public interface FUNCPTR extends Callback {
		int apply(Object... varargs);
	};
	/**
	 * Original signature : <code>void* initializeAnalogPort(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:7</i><br>
	 * @deprecated use the safer methods {@link #initializeAnalogPort(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #initializeAnalogPort(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer initializeAnalogPort(Pointer port_pointer, IntByReference status);
	/**
	 * Original signature : <code>void* initializeAnalogPort(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:7</i>
	 */
	public static native Pointer initializeAnalogPort(Pointer port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool checkAnalogModule(uint8_t)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:8</i>
	 */
	public static native byte checkAnalogModule(byte module);
	/**
	 * Original signature : <code>bool checkAnalogChannel(uint32_t)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:9</i>
	 */
	public static native byte checkAnalogChannel(int pin);
	/**
	 * Original signature : <code>void setAnalogSampleRate(float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:11</i><br>
	 * @deprecated use the safer methods {@link #setAnalogSampleRate(float, java.nio.IntBuffer)} and {@link #setAnalogSampleRate(float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogSampleRate(double samplesPerSecond, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogSampleRate(float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:11</i>
	 */
	public static native void setAnalogSampleRate(double samplesPerSecond, IntBuffer status);
	/**
	 * Original signature : <code>float getAnalogSampleRate(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:12</i><br>
	 * @deprecated use the safer methods {@link #getAnalogSampleRate(java.nio.IntBuffer)} and {@link #getAnalogSampleRate(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native float getAnalogSampleRate(IntByReference status);
	/**
	 * Original signature : <code>float getAnalogSampleRate(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:12</i>
	 */
	public static native float getAnalogSampleRate(IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogSampleRateWithModule(uint8_t, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:13</i><br>
	 * @deprecated use the safer methods {@link #setAnalogSampleRateWithModule(byte, float, java.nio.IntBuffer)} and {@link #setAnalogSampleRateWithModule(byte, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogSampleRateWithModule(byte module, double samplesPerSecond, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogSampleRateWithModule(uint8_t, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:13</i>
	 */
	public static native void setAnalogSampleRateWithModule(byte module, double samplesPerSecond, IntBuffer status);
	/**
	 * Original signature : <code>float getAnalogSampleRateWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:14</i><br>
	 * @deprecated use the safer methods {@link #getAnalogSampleRateWithModule(byte, java.nio.IntBuffer)} and {@link #getAnalogSampleRateWithModule(byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native float getAnalogSampleRateWithModule(byte module, IntByReference status);
